# fbxsdk_python

./: .gitignore  Dockerfile  PythonBindings.py  Readme.md  build.bat  build.sh  build_wheels.bat  build_wheels.sh  buildall.sh  builder.py  create_sdist.bat  create_sdist.sh  patch  project.py  pull_reqs.bat  pull_reqs.sh  pyproject.toml  reqs.txt  reqs_win.txt
