# Specify sip v5 as the build system for the package.
[build-system]
requires = ["sip >=5", "auditwheel", "patch"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "fbxsdkpy"
version = "2020.1.post2"

# Configure the building of the fib bindings.
[tool.sip.bindings.fbx_module]
headers = ["fbxsdk.h"]
include-dirs = ["build/fbxsdk/include"]
library-dirs = ["build/fbxsdk/lib/all/x64/release"]

[tool.sip.project]
sip-files-dir = "build/fbxpy/sip"
wheel-includes = ["build/fbxpy/common/FbxCommon.py"]
minimum-glibc-version = "2.17"
linux-libraries = ["xml2", "z"]
linux-static-libraries = ["build/fbxsdk/lib/all/x64/release/libfbxsdk.a"]
win-libraries = ["libfbxsdk-md", "zlib-md", "libxml2-md", "Advapi32", "Wininet"]
builder-factory = "builder.py"
sdist-excludes = ["Dockerfile", "buildall.sh", "build_wheels.sh", "build_wheels.bat"]
